// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrackModel can build a track adding tiles at the first position with a particular type 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "left",
      "id": "id-14",
      "ratio": 2,
      "type": "curved-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-13",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track adding tiles at the first position with the default specifications 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-12",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-11",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track adding tiles at the last position with a particular type 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "left",
      "id": "id-10",
      "ratio": 2,
      "type": "curved-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track adding tiles at the last position with the default specifications 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-9",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track for rendering using a start position and angle 1`] = `
Object {
  "height": 421.1269837220809,
  "tiles": Array [
    Object {
      "angle": 45,
      "component": [Function],
      "direction": "right",
      "id": "id-68",
      "model": StraightTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": 100,
      "y": 100,
    },
    Object {
      "angle": 45,
      "component": [Function],
      "direction": "right",
      "id": "id-69",
      "model": CurvedTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": 22.218254069479784,
      "y": 177.78174593052023,
    },
    Object {
      "angle": 135,
      "component": [Function],
      "direction": "right",
      "id": "id-70",
      "model": StraightTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -55.56349186104045,
      "y": 177.78174593052023,
    },
    Object {
      "angle": 135,
      "component": [Function],
      "direction": "right",
      "id": "id-71",
      "model": CurvedTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -133.3452377915607,
      "y": 100.00000000000001,
    },
    Object {
      "angle": 225,
      "component": [Function],
      "direction": "right",
      "id": "id-72",
      "model": StraightTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -133.3452377915607,
      "y": 22.218254069479798,
    },
    Object {
      "angle": 225,
      "component": [Function],
      "direction": "right",
      "id": "id-73",
      "model": CurvedTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -55.563491861040475,
      "y": -55.56349186104045,
    },
    Object {
      "angle": 315,
      "component": [Function],
      "direction": "right",
      "id": "id-74",
      "model": StraightTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": 22.218254069479755,
      "y": -55.56349186104046,
    },
    Object {
      "angle": 315,
      "component": [Function],
      "direction": "right",
      "id": "id-75",
      "model": CurvedTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": 100,
      "y": 22.21825406947974,
    },
  ],
  "width": 421.1269837220809,
  "x": -227.2361107568208,
  "y": -149.45436482630055,
}
`;

exports[`TrackModel can build a track for rendering using default position 1`] = `
Object {
  "height": 330,
  "tiles": Array [
    Object {
      "angle": 0,
      "component": [Function],
      "direction": "right",
      "id": "id-60",
      "model": StraightTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": 0,
      "y": 0,
    },
    Object {
      "angle": 0,
      "component": [Function],
      "direction": "right",
      "id": "id-61",
      "model": CurvedTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": 0,
      "y": 110,
    },
    Object {
      "angle": 90,
      "component": [Function],
      "direction": "right",
      "id": "id-62",
      "model": StraightTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -55,
      "y": 165,
    },
    Object {
      "angle": 90,
      "component": [Function],
      "direction": "right",
      "id": "id-63",
      "model": CurvedTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -165,
      "y": 165,
    },
    Object {
      "angle": 180,
      "component": [Function],
      "direction": "right",
      "id": "id-64",
      "model": StraightTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -220,
      "y": 110,
    },
    Object {
      "angle": 180,
      "component": [Function],
      "direction": "right",
      "id": "id-65",
      "model": CurvedTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -220,
      "y": 0,
    },
    Object {
      "angle": 270,
      "component": [Function],
      "direction": "right",
      "id": "id-66",
      "model": StraightTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -165,
      "y": -55.00000000000001,
    },
    Object {
      "angle": 270,
      "component": [Function],
      "direction": "right",
      "id": "id-67",
      "model": CurvedTileModel {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "length": 110,
        "padding": 10,
        "ratio": 1,
        "width": 90,
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -55,
      "y": -55.00000000000003,
    },
  ],
  "width": 330,
  "x": -275,
  "y": -110.00000000000003,
}
`;

exports[`TrackModel can build a track inserting tiles after a position in the middle 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-54",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-55",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-57",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-56",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track inserting tiles after an inexistent position 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-47",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track inserting tiles after the first position 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-48",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-50",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-49",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track inserting tiles after the last position 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-51",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-52",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-53",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track inserting tiles after with a particular type 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-58",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "left",
      "id": "id-59",
      "ratio": 2,
      "type": "curved-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track inserting tiles before a position in the middle 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-41",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-44",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-42",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-43",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track inserting tiles before an inexistent position 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-34",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track inserting tiles before the first position 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-37",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-35",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-36",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track inserting tiles before the last position 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-38",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-40",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-39",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track inserting tiles before with a particular type 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "left",
      "id": "id-46",
      "ratio": 2,
      "type": "curved-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-45",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track removing tiles at inexistent position 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-24",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track removing tiles from the end 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-21",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-22",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track removing tiles from the middle 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-18",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-20",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track removing tiles from the start 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-16",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-17",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track replacing tiles at inexistent position 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-33",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track replacing tiles with a tile having a particular type 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-29",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-30",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "left",
      "id": "id-32",
      "ratio": 2,
      "type": "curved-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track replacing tiles with a tile having default specifications 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-25",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-28",
      "ratio": 1,
      "type": "straight-tile",
    },
    TileReferenceModel {
      "direction": "right",
      "id": "id-27",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can build a track with the given size 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [],
}
`;

exports[`TrackModel can export to an object 1`] = `
Array [
  Object {
    "direction": "right",
    "ratio": 1,
    "type": "curved-tile",
  },
]
`;

exports[`TrackModel can import from an object 1`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "right",
      "id": "id-77",
      "ratio": 1,
      "type": "straight-tile",
    },
  ],
}
`;

exports[`TrackModel can import from an object 2`] = `
TrackModel {
  "barrierChunks": 4,
  "barrierWidth": 5,
  "laneWidth": 80,
  "track": Array [
    TileReferenceModel {
      "direction": "left",
      "id": "id-78",
      "ratio": 2,
      "type": "curved-tile",
    },
  ],
}
`;
